--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: AI Automation CI
+name: AI Automation CI/CD
 
 on:
   push:
@@ -17,19 +17,23 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: 3.11
+        python-version: '3.10'
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install openpyxl pytest-html
 
-    - name: Run Pytest with HTML report
+    - name: Run Pytest - RunMode=Yes + HTML report
       run: |
-        mkdir -p reports
-        pytest tests/ --html=reports/report.html --self-contained-html
+        pytest --disable-warnings \
+               --html=reports/report.html \
+               --self-contained-html \
+               -o log_cli_level=INFO \
+               -k "RunModeYes"
 
-    - name: Upload HTML report
+    - name: Upload HTML report as artifact
       uses: actions/upload-artifact@v3
       with:
         name: pytest-report
