--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r ai_automation_framework/requirements.txt
         pip install openpyxl pytest-html
 
     - name: Run Pytest - RunMode=Yes + HTML report
