--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,8 @@ jobs:
     - name: Run Pytest - RunMode=Yes + HTML report
       run: |
         mkdir -p ai_automation_framework/reports
-        pytest ai_automation_framework/tests --disable-warnings \
+        pytest ai_automation_framework/tests \
+               --disable-warnings \
                --html=ai_automation_framework/reports/report.html \
                --self-contained-html \
                -o log_cli_level=INFO \
